--- a/src/main/resources/i18n/exception_en.yml
+++ b/src/main/resources/i18n/exception_en.yml
@@ -5,3 +5,8 @@ unKnown:
 userNotFound:
     code: "-1000"
     msg: "This member not exist"
+
+# exception_en.yml
+emailSigninFailed:
+    code: "-1001"
+    msg: "Your account does not exist or your email or password is incorrect."
