--- a/src/main/resources/i18n/exception_en.yml
+++ b/src/main/resources/i18n/exception_en.yml
@@ -10,3 +10,13 @@ userNotFound:
 emailSigninFailed:
     code: "-1001"
     msg: "Your account does not exist or your email or password is incorrect."
+
+# exception_en.yml
+entryPointException:
+    code: "-1002"
+    msg: "You do not have permission to access this resource."
+
+# exception_en.yml
+accessDenied:
+    code: "-1003"
+    msg: "A resource that can not be accessed with the privileges it has."
