--- a/src/main/resources/i18n/exception_en.yml
+++ b/src/main/resources/i18n/exception_en.yml
@@ -20,3 +20,13 @@ entryPointException:
 accessDenied:
     code: "-1003"
     msg: "A resource that can not be accessed with the privileges it has."
+
+# exception_en.yml
+communicationError:
+    code: "-1004"
+    msg: "An error occurred during communication."
+
+# exception_en.yml
+existingUser:
+    code: "-1005"
+    msg: "You are an existing member."
