--- a/src/main/resources/i18n/exception_en.yml
+++ b/src/main/resources/i18n/exception_en.yml
@@ -30,3 +30,11 @@ communicationError:
 existingUser:
     code: "-1005"
     msg: "You are an existing member."
+
+# exception_en.yml
+notOwner:
+    code: "-1006"
+    msg: "You are not the owner of this resource."
+resourceNotExist:
+    code: "-1007"
+    msg: "This resource does not exist."
